# some-code

./: .gitignore  LICENSE  README.md
c/: CMakeLists.txt  main.c  test_struct.c  test_struct.h
c/001/: point_func.c  test_struct.c
c/002/: CMakeLists.txt  main.c
c/003/: CMakeLists.txt  README.md  main.c
c/004/: CMakeLists.txt  main.c
c/005/: CMakeLists.txt  main.c
php/: calculator.php  convert.php  helpers.php  sum.php
php/calculator/: README.md  composer.json
php/calculator/spec/: CalculatorSpec.php  ConvertSpec.php
php/calculator/src/: Calculator.php  Convert.php  helpers.php
php/calculator/src/Tree/: Node.php  X.php
php/svg/: bin.php  composer.json
